# core/openapi.json
@@ -3334,6 +3334,10 @@
           "prompt": {
             "type": "string"
           },
+          "structure": {
+            "type": "string",
+            "default": ""
+          },
           "state": {
             "type": "string",
             "enum": [
@@ -3495,6 +3499,10 @@
           },
           "prompt": {
             "type": "string"
+          },
+          "structure": {
+            "type": "string",
+            "default": ""
           },
           "state": {
             "type": "string",
@@ -3835,6 +3843,10 @@
           },
           "prompt": {
             "type": "string"
+          },
+          "structure": {
+            "type": "string",
+            "default": ""
           },
           "state": {
             "type": "string",
